# ok_color

./: .gitignore  README.md  library.properties  mise.toml  ok_color.h  pyproject.toml
examples/: mise.toml
src/: ok_color_helpers.h  ok_color_hsv.cpp  ok_color_hsv.h  ok_color_lrgb.cpp  ok_color_lrgb.h  ok_color_rgb.cpp  ok_color_rgb.h  ok_color_srgb.cpp  ok_color_srgb.h
tests/: helpers_test.cpp  meson.build
